--- a/package.json
+++ b/package.json
@@ -12,14 +12,27 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
+  "config": {
+    "nuxt": {
+      "host": "127.0.0.1",
+      "port": "1818"
+    }
+  },
   "dependencies": {
+    "axios": "^0.18.0",
+    "less": "^3.8.1",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "css-loader": "^1.0.0",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "less-loader": "^4.1.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "stylus-loader": "^3.0.2"
   }
 }
