--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.7",
     "less": "^3.8.1",
     "nuxt": "^1.0.0"
   },
